align text tablet dessign fixed

--- a/src/styles/containers/HomeContainer.scss
+++ b/src/styles/containers/HomeContainer.scss
@@ -51,6 +51,7 @@
         padding: 0vw 8vw;
 
         @media screen and (max-width: 768px) {
+          align-items: center;
           padding: 0vw 12vw;
         }
 
